--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ main{
     width: 100%;
     /*Alto de 100vh que es 1 pantalla*/
     height: 90vh;
-    background:linear-gradient(rgba(5,7,12,0.25), rgba(5,7,12,0.25)), url(https://moussepedia.com/imagenes/mousse-de-pina-y-coco-1024x683.jpg);
+    background:linear-gradient(rgba(5,7,12,0.25), rgba(5,7,12,0.25)), url(https://i.pinimg.com/736x/1d/81/71/1d817120c75c9429be8d0151a4aa581f.jpg);
     background-position: center;
     background-repeat: no-repeat;
 
