--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,14 @@ main{
         padding: 0px 0px 0px 0px;
     }
 
+    .hero .contenido-home .sabor-natural{
+        font-size: 50px;
+    }
+
+    .hero .contenido-home .text-home{
+        font-size: 30px;
+    }
+
     .hero .contenido-home .seccion-videos{
         display: flex;
         align-items: center;
