--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,16 @@ main{
         padding: 0px 0px 0px 0px;
     }
 
+    .hero .contenido-home .informacion-home{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .hero .contenido-home .informacion-home .delicious{
+        padding: 0px 30px 0px 30px; 
+    }
+
     .hero .contenido-home .sabor-natural{
         font-size: 50px;
     }
